add manuals
